<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/topbar_height"
    android:paddingStart="@dimen/spacing_md"
    android:paddingEnd="@dimen/spacing_md"
    android:background="@color/background_white">

    <!-- Menu icon -->
    <ImageView
        android:id="@+id/topbar_menu_icon"
        android:layout_width="@dimen/icon_button_size"
        android:layout_height="@dimen/icon_button_size"
        android:src="@drawable/ic_menu"
        android:background="@drawable/bg_icon_circle"
        android:padding="@dimen/spacing_sm"
        android:contentDescription="@string/menu_icon"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/text_primary" />

    <!-- Title -->
    <TextView
        android:id="@+id/topbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/Text.TitleMedium"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Notification icon -->
    <ImageView
        android:id="@+id/topbar_notification_icon"
        android:layout_width="@dimen/icon_button_size"
        android:layout_height="@dimen/icon_button_size"
        android:src="@drawable/ic_notification"
        android:background="@drawable/bg_icon_circle"
        android:padding="@dimen/spacing_sm"
        android:contentDescription="@string/notifications"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/primary_blue" />

</androidx.constraintlayout.widget.ConstraintLayout>